# pokemonle-api

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-build.yaml
migration/: env.py  tool.py
migration/data/: abilities.csv  ability_flavor_text.csv  evolution_trigger_prose.csv  generation_names.csv  language_names.csv  pokemon.csv  pokemon_species_names.csv  version_names.csv
migration/versions/: 0674254ac495_create_pokemon_type_and_ability.py  5068fab41598_create_ability.py  55b15f040eed_create_type.py  5d8b9dd8865f_create_move_damage_class.py  630f311ad9ac_create_generation_and_language.py  63149afd0582_create_pokemon_egg_group.py  637965b01865_create_pokemon_color_chape_and_habitat.py  7e48c46aaca3_create_growth.py  9e83773309fd_create_pokemon_species.py  afa68bbf4bf5_create_evolution_chain_and_item.py  c73a15953d5d_create_version.py  d8cc0971d5af_create_location_region_and_gender.py  db557f2347d7_create_pokemon_evolution.py  f468085379df_create_pokemon_stats.py
serve/src/: app.py  requirements.txt
serve/src/data/: ability_list.json  move_list.json
serve/src/utils/: pokeUtils.py  (+2 more)
src/conf/: env.py
src/core/: pokemon.py
src/db/: alembic.ini  database.py  sqlite.db
src/router/: ability.py  game.py  gen.py  language.py  pokemon.py  version.py  versionGroup.py
src/utils/: compare.py  data.py  gen.py  pokemon.py  redis.py  setting.py
web/: .env  .env.development  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
web/public/: index.html
web/src/: App.tsx  App.vue  main.js  main.tsx
(+67 files in other folders)
