[project]
name = "pokemonle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "fastapi-socketio>=0.0.10",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
