[project]
name = "pokemonle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "alembic>=1.15.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "fastapi-socketio>=0.0.10",
    "pydantic-settings>=2.9.1",
    "redis>=5.2.1",
    "scalar-fastapi>=1.0.3",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
